-
Bug
-
Resolution: Done
-
P2: Important
-
6.2
-
-
e402e1103b874c0bf91a1bc754752ee73ffadf33 (qt/qtbase/dev) d648b9fa8a5e1e757b827927d424b9c4346da080 (qt/tqtc-qtbase/5.15)
It seems that there is some regression on dev branch. Software Keyboard is not showing after changing the focus.
It is happening when Keyboard is visible and focus is changed to widget that also need the keyboard. In such case keyboard is hiding (and NOT showing again)
Take look on attached movie:
Before.mp4 - behavior before regression - branch 6.1
After.mp4 - after before regression - branch dev
- relates to
-
QTBUG-92241 Virtual keyboard "OK" button must not accept the QDialog
-
- Reported
-
-
QTBUG-61652 Android's virtual keyboard "OK" button must not accept the QDialog
-
- Closed
-
- mentioned in
-
Page Loading...